--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="team.html">Team</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="events.html">Events</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="mentorship.html">Mentorship</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="mentorship.html">Mentorship</a></li> -->
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="bootcamp.html">Bootcamp</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contact.html">Contact</a></li>
                     </ul>
