--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,21 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="team.html">Team</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="events.html">Events</a></li>
+                        <div class="dropdown">
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="team.html">Team</a></li>
+                            <div class="dropdown-content">
+                                <a href="#">Current Eboard</a>
+                                <a href="#">2019-2020 Eboard</a>
+                                <a href="#">2018-2019 Eboard</a>
+                            </div>
+                        </div>
+                        <div class="dropdown">
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="events.html">Events</a></li>
+                            <div class="dropdown-content">
+                                <a href="#">Upcoming Events</a>
+                                <a href="#">Past Events</a>
+                            </div>
+                        </div>
                         <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="mentorship.html">Mentorship</a></li> -->
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="bootcamp.html">Bootcamp</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contact.html">Contact</a></li>
