--- a/19-20.html
+++ b/19-20.html
@@ -56,8 +56,8 @@
     <section class="page-section-larger" id="team">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">Our Team</h2>
-                <h3 class="section-subheading text-muted">Meet The 2020-2021 Eboard!</h3>
+                <h2 class="section-heading text-uppercase">2019-2020 Eboard</h2>
+                <h3 class="section-subheading text-muted">Meet The 2019-2020 Eboard!</h3>
             </div>
             <div class="row">
                 <div class="col-lg-4">
